--- a/src/scss/app/_layout.scss
+++ b/src/scss/app/_layout.scss
@@ -1,5 +1,28 @@
 .container {
   width: 80%;
+  max-width: 800px;
   margin: 0 auto;
   padding: 2rem 0;
+}
+
+.row {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 0;
+  align-items: stretch;
+}
+
+.column {
+  display: flex;
+  align-items: stretch;
+
+  &--start {
+    justify-content: flex-start;
+    margin-right: auto;
+  }
+
+  &--end {
+    justify-content: flex-end;
+    margin-right: left;
+  }
 }
