--- a/src/scss/app/_layout.scss
+++ b/src/scss/app/_layout.scss
@@ -14,7 +14,6 @@
 
 .column {
   display: flex;
-  align-items: stretch;
 
   &--start {
     justify-content: flex-start;
@@ -23,6 +22,6 @@
 
   &--end {
     justify-content: flex-end;
-    margin-right: left;
+    margin-left: auto;
   }
 }
