--- a/src/scss/app/_typography.scss
+++ b/src/scss/app/_typography.scss
@@ -1,8 +1,17 @@
 html {
   font-family: sans-serif;
+  color: #212121;
 }
 
 h2 {
   font-size: 1.8rem;
   margin-bottom: 1rem;
+
+  @media screen and (max-width: 700px) {
+    font-size: 1.4rem;
+  }
+}
+
+p {
+  margin-bottom: 0.4rem;
 }
