--- a/src/scss/app/_forms.scss
+++ b/src/scss/app/_forms.scss
@@ -5,4 +5,10 @@ input {
   font-size: 1rem;
   border: 0;
   border-radius: 3px;
+  outline: none;
+  transition: box-shadow 0.3s;
+
+  &:hover, &:focus, &:active {
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+  }
 }
