--- a/src/scss/app/components/_venue.scss
+++ b/src/scss/app/components/_venue.scss
@@ -7,7 +7,7 @@
   border-radius: 3px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.2);
   text-decoration: none;
-  transition: transform 0.3s ease, box-shadow 0.3s;
+  transition: transform 0.3s ease, box-shadow 0.3s, opacity, 0.3s;
 
   &:hover {
     transform: translateY(-4px);
